--- a/index.html
+++ b/index.html
@@ -1,12 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <!-- basic -->
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <!-- mobile metas -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+        <!-- site metas -->
+        <title>Tech Manifest</title>
+        <meta name="keywords" content="">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <!-- style css -->
+        <link rel="stylesheet" href="style.css">
+        <link rel="html" href="web.html">
+        <link rel="html" href="code.html">
+        <link rel="html" href="brain.html">
+
+        <style>
+            /* .rectangle{
+                height: 200px;
+                background-color: #FFF1DC;
+            } */
+            img{
+                border-radius: 30%;
+            }
+            .button {
+                background-color: #4CAF50;
+                border: none;
+                color: white;
+                padding: 15px 32px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 16px;
+                margin: 4px 2px;
+                cursor: pointer;
+            }
+            .container {
+                display: flex;
+                align-items: center;
+                justify-content: center
+            }
+
+
+            .text {
+                font-size: 20px;
+                padding-left: 20px;
+            }
+            .item1{
+    width:80px;
+    text-align:left;
+    display:block;
+    background-color: transparent;
+    border: 1px solid transparent;
+    margin-right: 10px;
+    margin-bottom: 1px;
+    float:left;
+  }
+  .item2{
+    width:80px;
+    text-align:center;
+    display:block;
+    background-color: transparent;
+    border: 1px solid transparent;
+    margin-right: 10px;
+    margin-bottom: 1px;
+    float:center;
+  }
+        </style>
+     </head>
 <body>
     
+    <!-- <div>
+
+    <!-- </div> class="rectangle" style="position: relative; top: 0px; color: #C47AFF; font-size: 700%; text-align: right;" > -->
+        <!-- <center><img src="i1.png" style="width: 200px; position: relative;"></center>
+        <h1 style="font-size: 700%; color: blueviolet;">Tech Manifest</h1>
+    </div> --> -->
+    <div class="container">
+        <div class="image">
+            <right><img src="i1.png" style="width: 200px; position: relative;"></right>        
+        </div>
+        <div class="text">
+            <h1 style="font-size: 700%; color: #FB2576;">Tech Manifest</h1>
+        </div>
+    </div>
+    <center><h1 style="font-size: 400%; color: #E94560;">Get Event Certificates</h1></center>
+    <div class="row">
+        <center><div class="column">
+                <img src="i2.png" style="width: 200px;" alt=""/>
+                <p><button><a href="web.html">Get Certificate For</a></button></p>
+        </div>
+        <div class="column">
+                <img src="i3.png" style="width: 200px;" alt=""/>
+                <p><button><a href="brain.html">Get Certificate For</a></button></p>
+        </div>
+        <div class="column">
+                    <img src="i4.png" style="width: 200px;" alt=""/>
+                    <p><button><a href="code.html">Get Certificate For</a></button></p>
+        </div>
+    </center>
+    </div>
 </body>
 </html>
